# MAD-a-Sample

./: CMakeLists.txt  CMakeUserPresets.json  README.md  README.zh-CN.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
scripts/: build.bat  configure.bat
